--- a/toDo.html
+++ b/toDo.html
@@ -16,9 +16,9 @@
 	<h1>To-Do List</h1>
 	<input type="text" name="add-todo" placeholder="Add New To-Do">
 	<ul>
-		<li>Walk dog</li>
-		<li>Feed cat</li>
-		<li>Do coding assignment</li>
+		<li>Walk dog <button>Delete</button></li>
+		<li>Feed cat <button>Delete</button></li>
+		<li>Do coding assignment <button>Delete</button></li>
 	</ul>
 
 	<!-- jQuery -->
