Added input box toggle.

--- a/toDo.html
+++ b/toDo.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<h1>To-Do List</h1>
+	<button id="input-toggle">Show/Hide</button>
 	<input type="text" name="add-todo" placeholder="Add New To-Do">
 	<ul>
 		<li><span>Walk dog</span> <button>Delete</button></li>
