Removed extra blank lines in HTML tag

--- a/toDo.html
+++ b/toDo.html
@@ -18,9 +18,7 @@
 	<div id="container">
 		<header>
 			<h1>To-Do List</h1>
-			<button id="input-toggle" aria-label="Show/Hide"><i class="fas fa-plus-circle"></i>
-
-</button>
+			<button id="input-toggle" aria-label="Show/Hide"><i class="fas fa-plus-circle"></i></button>
 			<input type="text" name="add-todo" placeholder="Add New To-Do">
 		</header>	
 		<ul>
